# semantic-dictionary

./: .gitattributes  .gitignore  .pdm-python  README.md  WORKFLOW.md  pyproject.toml
.github/workflows/: build.yml  preview.yml  project-label-sync.yml  release.yml
code/DR_EU_2024-490/: location-search_points-of--to-travel_snippet_1.xml
drafts/: INDEX.md  README.md  WORKFLOW.md  index.md
drafts/DR_EU_2015-962/: dynamic-road-status-accidents-and-incidents.md  dynamic-road-status-availability-of-charging-points-for-electric-vehicles.md  dynamic-road-status-availability-of-delivery-areas.md  dynamic-road-status-availability-of-parking-places.md  dynamic-road-status-bridge-closures.md  dynamic-road-status-cost-of-parking.md  dynamic-road-status-direction-of-travel-on-reversible-lanes.md  dynamic-road-status-dynamic-speed-limits.md  dynamic-road-status-lane-closures.md  dynamic-road-status-overtaking-bans-on-heavy-goods-vehicles.md  dynamic-road-status-poor-road-conditions.md  dynamic-road-status-road-closures.md  dynamic-road-status-roadworks.md  (+58 more)
preview/: DR_EU_2015-962.md  DR_EU_2022-670.md  DR_EU_2024-490.md  DR_EU_885-2013.md  DR_EU_886-2013.md  INDEX.md  README.md
release/: DR_EU_2015-962.md  DR_EU_2022-670.md  DR_EU_2024-490.md  DR_EU_885-2013.md  DR_EU_886-2013.md  INDEX.md  README.md
scripts/: README.md  create_drafts_index.py  create_issues.py  generate_preview.py  generate_release.py  gr1.py  pyproject.toml  split_vocabulary_folder.py
source/: DR (EU) 2015-962.md  DR (EU) 2024-490.md  DR (EU) 885-2013.md  DR (EU) 886-2013.md
vocab/: README.md
(+417 files in other folders)
